Fixed toolbar alignment issue

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -1828,7 +1828,7 @@ Alarms popup css
     }
 }
 
-#toolbar {
+#toolbar_settings {
     position: fixed;
     top: 89px;
     right: 20px;
